# openflow

./: .gitignore  README.md  pyproject.toml  run_demo.ps1
data/index/: openflow.db
docs/: alpha_release_checklist.md  alpha_release_notes.md  beta_backlog.md  blueprint_alignment.json  decision_registry.json  demo_flow.md  demo_runbook.md  frontend_prompt_pack.md  knowledge_index.json  landing_blueprint.md  master_prd.md  product_hook.md  research_master_outline.md  taxonomy.md  workflow_blueprint.json
src/openflow/: __init__.py  app.py  models.py  repository.py  service.py
static/app/: index.html  main.js  styles.css
templates/: base.html  decisions.html  knowledge.html  landing.html  project.html  session.html  tasks.html  welcome.html  workflow.html
tests/: test_app.py
